--- a/create_structures.yml
+++ b/create_structures.yml
@@ -14,6 +14,7 @@
      count: 3
      region: us-east-1
      security_group: my-security-grp
+ # edit this with the path to your user-data file
      user_data: "{{ lookup('file', '/home/ubuntu/playbooks/user-data.sh') }}"
    
    tasks:
